--- a/OpenFood/Base.lproj/Main.storyboard
+++ b/OpenFood/Base.lproj/Main.storyboard
@@ -229,7 +229,7 @@
                         <viewControllerLayoutGuide type="top" id="XRw-Cr-UR2"/>
                         <viewControllerLayoutGuide type="bottom" id="yn7-CR-ZNX"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="45j-CF-9nm">
+                    <view key="view" contentMode="scaleAspectFill" id="45j-CF-9nm">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
