--- a/OpenFood/Base.lproj/Main.storyboard
+++ b/OpenFood/Base.lproj/Main.storyboard
@@ -37,10 +37,22 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MQJ-fR-NFj" customClass="GradeLabel" customModule="OpenFood" customModuleProvider="target">
+                                <rect key="frame" x="16" y="383" width="20" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="20" id="2p7-dQ-YVB"/>
+                                    <constraint firstAttribute="height" constant="20" id="9Fq-qe-mrD"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="MQJ-fR-NFj" firstAttribute="leading" secondItem="oYb-tx-8y5" secondAttribute="leadingMargin" id="9k7-WL-h9E"/>
                             <constraint firstItem="k19-6e-8eE" firstAttribute="top" secondItem="8z6-o3-FR0" secondAttribute="bottom" constant="20" id="Aer-zR-tgL"/>
+                            <constraint firstItem="MQJ-fR-NFj" firstAttribute="top" secondItem="Jae-jd-fTa" secondAttribute="bottom" constant="14" id="EHG-Ke-0BQ"/>
                             <constraint firstItem="k19-6e-8eE" firstAttribute="leading" secondItem="V3g-zB-fE6" secondAttribute="leading" constant="16" id="LsB-Nl-m3u"/>
                             <constraint firstItem="Jae-jd-fTa" firstAttribute="top" secondItem="k19-6e-8eE" secondAttribute="bottom" constant="14" id="Ojg-n4-eau"/>
                             <constraint firstItem="Jae-jd-fTa" firstAttribute="leading" secondItem="oYb-tx-8y5" secondAttribute="leadingMargin" id="UXI-Pr-chJ"/>
@@ -54,6 +66,7 @@
                     </view>
                     <connections>
                         <outlet property="backgroundImage" destination="V3g-zB-fE6" id="GlS-49-Sne"/>
+                        <outlet property="gradeLabel" destination="MQJ-fR-NFj" id="2W7-y8-w0g"/>
                         <outlet property="imageView" destination="k19-6e-8eE" id="uka-3N-xgk"/>
                         <outlet property="nameLabel" destination="Jae-jd-fTa" id="XIZ-7I-5Od"/>
                     </connections>
